# DesktopWeatherEvents

./: CMakeLists.txt  CurrentWeatherData.h  GetUserLocation.h  MainElement.cpp  README.md  TopBarElement.cpp  UiManagement.cpp  main.cpp
